Support camera and processing stabilization
